<resources>
    <string name="app_name">All Right</string>
    <string name="title_home">Home</string>
    <string name="title_diary">Diary</string>
    <string name="title_statics">Statics</string>
    <string name="title_account">Account</string>
    <string name="gest">Gest</string>
    <string name="user_mail">user@mail.com</string>
    <string name="user_icon">user_icon</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="security_save">Security Save</string>
    <string name="sign_in">Sign In</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="user_name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="or">or</string>
    <string name="google_button">Google Button</string>
    <string name="log_out">Log Out</string>
    <string name="login_error" type="id">Mail or password incorrects.</string>
    <string name="preferences_key">user</string>
    <string name="storage_user_mail">user_mail</string>
    <string name="storage_user_pass">user_pass</string>
    <string name="title_activity_create_page">CreatePage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_page_ask">How was your day ?</string>
    <string name="background">Background</string>
    <string name="loading">Loading…</string>
    <string name="languaje_tag">en</string>
    <string name="happines">Happines</string>
    <string name="neutral">Neutral</string>
    <string name="angry">Angry</string>
    <string name="sadness">Sadness</string>
    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="anger">Anger</string>
    <string name="wellcome">- Wellcome -</string>
    <string name="settings">Settings</string>
</resources>