<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_diary"
        android:icon="@drawable/ic_menu_book_24"
        android:title="@string/title_diary"/>

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/navigation_statics"
        android:icon="@drawable/ic_bar_chart_24"
        android:title="@string/title_statics"/>

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_circle_24"
        android:title="@string/title_account"/>

</menu>