<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.appFragments.Statics">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent,SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                app:cardCornerRadius="16dp"
                android:elevation="20dp"
                android:padding="8dp"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/barChart"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/imageView3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0">

                    </com.github.mikephil.charting.charts.BarChart>

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="1dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/happines"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/barChart"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/barChart"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0"
                        app:srcCompat="@color/green" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/happines"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                        app:layout_constraintStart_toEndOf="@+id/imageView3"
                        app:layout_constraintTop_toTopOf="@+id/imageView3" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="8dp"
                        android:contentDescription="@string/positive"
                        app:layout_constraintBottom_toBottomOf="@+id/textView5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/textView5"
                        app:layout_constraintTop_toTopOf="@+id/textView5"
                        app:srcCompat="@color/yellow" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/positive"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toTopOf="@+id/imageView4" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="8dp"
                        android:contentDescription="@string/anger"
                        app:layout_constraintBottom_toBottomOf="@+id/textView6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/textView6"
                        app:layout_constraintTop_toTopOf="@+id/textView6"
                        app:srcCompat="@color/red" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/anger"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                        app:layout_constraintStart_toEndOf="@+id/imageView5"
                        app:layout_constraintTop_toTopOf="@+id/imageView5" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="8dp"
                        android:contentDescription="@string/sadness"
                        app:layout_constraintBottom_toBottomOf="@+id/textView7"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/textView7"
                        app:layout_constraintTop_toTopOf="@+id/textView7"
                        app:srcCompat="@color/blue" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/sadness"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                        app:layout_constraintStart_toEndOf="@+id/imageView6"
                        app:layout_constraintTop_toTopOf="@+id/imageView6" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="8dp"
                        android:contentDescription="@string/negative"
                        app:layout_constraintBottom_toBottomOf="@+id/textView8"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/textView8"
                        app:layout_constraintTop_toTopOf="@+id/textView8"
                        app:srcCompat="@color/blueviolet" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/negative"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                        app:layout_constraintStart_toEndOf="@+id/imageView7"
                        app:layout_constraintTop_toTopOf="@+id/imageView7" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="32dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <TextView
                    android:id="@+id/resultStatics"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text=""
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>